--- a/videos.html
+++ b/videos.html
@@ -61,12 +61,11 @@
       <a class="a01" href="videos.html">videos</a>
     </div>
 
-  <div>
-    <h2>about us</h2>
+  <div class="div02">
+    <h2>latest projects</h2>
 
-    <p>
-photos and videos ng mga taong walang magawa
-    </p>
+    <iframe width="768" height="384" src="https://www.youtube.com/embed/imLRy3J5eKw?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
   </div>
 
   <div class="div02">
