--- a/photos.html
+++ b/photos.html
@@ -62,7 +62,7 @@
   </div>
 
   <div class="div02">
-    <h2>certificates</h2>
+    <h2>photos</h2>
 
     <a class="img04" href="https://hosting.photobucket.com/images/i/paulocruzpambid/x.jpg?width=320&height=320&fit=bounds">
       <img class="img04" src="https://hosting.photobucket.com/images/i/paulocruzpambid/x.jpg?width=320&height=320&fit=bounds" alt="">
