--- a/videos.html
+++ b/videos.html
@@ -62,7 +62,7 @@
     </div>
 
   <div class="div02">
-    <h2>latest projects</h2>
+    <h2>videos</h2>
 
     <iframe width="768" height="384" src="https://www.youtube.com/embed/imLRy3J5eKw?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen></iframe>
