--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ photos and videos ng mga taong walang magawa
     <a href="">
       <img class="img05" src="instagram.png" alt="">
     </a>
-    <a href="">
+    <a href="https://www.youtube.com/channel/UC_w5XvuPAlZJHgc_XVqxKSQ">
       <img class="img05" src="youtube.png" alt="">
     </a>
     <a href="">
