--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h2>home</h2>
 
     <p>
-photos and videos ng mga taong walang magawa
+wait, hindi ko alam ang ilalagay ko
     </p>
   </div>
 
