--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>tv</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="pcpambs.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,59 +13,67 @@
 
 <body>
 
-    <div>
-      <a href="index.html">
-        <img class="img01" src="pcpambs.jpg" alt="">
-      </a>
-      <a href="https://goo.gl/maps/R8gFsEc9HiRyGACf9">
-        <img class="img03" src="google-maps.png" alt="">
-      </a>
-      <a href="https://goo.gl/maps/R8gFsEc9HiRyGACf9">
-        bacoor cavite
-      </a><br>
-      <a href="viber://chat/?number=%2B639063646401">
-        <img class="img03" src="viber.png" alt="">
-      </a>
-      <a href="https://wa.me/639063646401">
-        <img class="img03" src="whatsapp.png" alt="">
-      </a>
-      <a href="sms:+639063646401">
-        0906 364 6401
-      </a><br>
-      <a href="viber://chat/?number=%2B639474821591">
-        <img class="img03" src="viber.png" alt="">
-      </a>
-      <a href="https://wa.me/639474821591">
-        <img class="img03" src="whatsapp.png" alt="">
-      </a>
-      <a href="sms:+639474821591">
-        0947 482 1591
-      </a><br>
-      <a href="email.html">
-        <img class="img03" src="gmail.png" alt="">
-      </a>
-      <a href="email.html">
-        pcpambs@gmail.com
-      </a><br>
-      <a href="index.html">
-        <img class="img03" src="www.png" alt="">
-      </a>
-      <a href="index.html">
-        pcpambs.github.io/tv
-      </a>
-    </div>
+  <div>
+    <a href="index.html">
+      <img class="img01" src="pcpambs.jpg" alt="">
+    </a>
+    <a href="https://goo.gl/maps/R8gFsEc9HiRyGACf9">
+      <img class="img03" src="google-maps.png" alt="">
+    </a>
+    <a href="https://goo.gl/maps/R8gFsEc9HiRyGACf9">
+      bacoor cavite
+    </a><br>
+    <a href="viber://chat/?number=%2B639063646401">
+      <img class="img03" src="viber.png" alt="">
+    </a>
+    <a href="https://wa.me/639063646401">
+      <img class="img03" src="whatsapp.png" alt="">
+    </a>
+    <a href="sms:+639063646401">
+      0906 364 6401
+    </a><br>
+    <a href="viber://chat/?number=%2B639474821591">
+      <img class="img03" src="viber.png" alt="">
+    </a>
+    <a href="https://wa.me/639474821591">
+      <img class="img03" src="whatsapp.png" alt="">
+    </a>
+    <a href="sms:+639474821591">
+      0947 482 1591
+    </a><br>
+    <a href="email.html">
+      <img class="img03" src="gmail.png" alt="">
+    </a>
+    <a href="email.html">
+      pcpambs@gmail.com
+    </a><br>
+    <a href="index.html">
+      <img class="img03" src="www.png" alt="">
+    </a>
+    <a href="index.html">
+      pcpambs.github.io/tv
+    </a>
+  </div>
 
-    <div class="div01">
-      <a class="a01" href="index.html">home</a>
-      <a class="a01" href="photos.html">photos</a>
-      <a class="a01" href="videos.html">videos</a>
-    </div>
+  <div class="div01">
+    <a class="a01" href="index.html">home</a>
+    <a class="a01" href="photos.html">photos</a>
+    <a class="a01" href="videos.html">videos</a>
+    <a class="a02" href="">four</a>
+    <a class="a02" href="">five</a>
+    <a class="a02" href="">six</a>
+    <a class="a02" href="">seven</a>
+    <a class="a02" href="">eight</a>
+    <a class="a02" href="">nine</a>
+    <a class="a03" href="">more..</a>
+    <a class="a04" href="">less..</a>
+  </div>
 
   <div>
     <h2>home</h2>
 
     <p>
-wait, hindi ko alam ang ilalagay ko
+      wait, hindi ko alam ang ilalagay ko
     </p>
   </div>
 
@@ -83,10 +91,14 @@ wait, hindi ko alam ang ilalagay ko
     <a href="https://www.youtube.com/channel/UC_w5XvuPAlZJHgc_XVqxKSQ">
       <img class="img05" src="youtube.png" alt="">
     </a>
-    <a href="">
+    <a href="https://www.tiktok.com/@pcpambs?_t=8jIPJLPOb8K&_r=1">
       <img class="img05" src="tik-tok.png" alt="">
     </a>
   </div>
+
+  <script src="index.js" charset="utf-8">
+
+  </script>
 
 </body>
 
