--- a/services.html
+++ b/services.html
@@ -69,11 +69,61 @@
       <a class="a04" href="">less..</a>
     </div>
 
-  <div class="div02">
-    <h2>videos</h2>
+  <div>
+    <h2>services</h2>
 
-    <iframe width="768" height="384" src="https://www.youtube.com/embed/imLRy3J5eKw?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen></iframe>
+    <table>
+      <tr>
+        <td>
+          <ul>
+            <h3>ARCHITECTURAL PLANS</h3>
+            <li>3D MODELING USING SKETCHUP</li>
+            <li>PHOTO / VIDEO RENDERING USING LUMION</li>
+            <li>EXPORTATION OF 3D MODEL INTO CAD FILE</li>
+            <li>PRINTING, SIGNING, AND SEALING OF PLANS, SPECIFICATIONS, CALCULATIONS, PRC / PTR, AND BUILDING PERMIT</li>
+            <h3>MEFPS PLANS</h3>
+            <li>PRINTING, SIGNING, AND SEALING OF PLANS, SPECIFICATIONS, CALCULATIONS, PRC / PTR, AND BUILDING PERMIT</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <h3>STRUCTURAL PLANS</h3>
+            <li>STRUCTURAL MODELING USING STAAD</li>
+            <li>STRUCTURAL DETAILING USING RCDC / RAM CONNECTION</li>
+            <li>EXPORTATION OF RCDC DRAWINGS TO CAD FILE</li>
+            <li>PRINTING, SIGNING, AND SEALING OF PLANS, SPECIFICATIONS, CALCULATIONS, PRC / PTR, AND BUILDING PERMIT</li>
+            <h3>GENERAL CONSTRUCTION WORKS</h3>
+          </ul>
+        </td>
+      </tr>
+    </table>
+
+    <h2>skills</h2>
+
+    <table>
+      <tr>
+        <td>
+          <ul>
+            <li>AUTOCAD</li>
+            <li>SKETCHUP</li>
+            <li>LUMION</li>
+            <li>STAAD</li>
+            <li>STAAD FOUNDATION</li>
+            <li>RCDC</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>STEEL AUTODRAFTER</li>
+            <li>RAM CONNECTION</li>
+            <li>MS PROJECT</li>
+            <li>MS EXCEL + VBA</li>
+            <li>MS OFFICE</li>
+            <li>HTML + CSS</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
   </div>
 
   <div class="div02">
