--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>tv</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="pcpambs.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,13 +59,21 @@
     <a class="a01" href="index.html">home</a>
     <a class="a01" href="photos.html">photos</a>
     <a class="a01" href="videos.html">videos</a>
+    <a class="a02" href="">four</a>
+    <a class="a02" href="">five</a>
+    <a class="a02" href="">six</a>
+    <a class="a02" href="">seven</a>
+    <a class="a02" href="">eight</a>
+    <a class="a02" href="">nine</a>
+    <a class="a03" href="">more..</a>
+    <a class="a04" href="">less..</a>
   </div>
 
   <div class="div02">
     <h2>photos</h2>
 
-    <a class="img04" href="https://hosting.photobucket.com/images/i/paulocruzpambid/x.jpg?width=320&height=320&fit=bounds">
-      <img class="img04" src="https://hosting.photobucket.com/images/i/paulocruzpambid/x.jpg?width=320&height=320&fit=bounds" alt="">
+    <a class="img04" href="https://i.ibb.co/WpZLPmq/cdo.jpg">
+      <img class="img04" src="https://i.ibb.co/WpZLPmq/cdo.jpg" alt="">
     </a>
 
   </div>
@@ -84,10 +92,14 @@
     <a href="https://www.youtube.com/channel/UC_w5XvuPAlZJHgc_XVqxKSQ">
       <img class="img05" src="youtube.png" alt="">
     </a>
-    <a href="">
+    <a href="https://www.tiktok.com/@pcpambs?_t=8jIPJLPOb8K&_r=1">
       <img class="img05" src="tik-tok.png" alt="">
     </a>
   </div>
+
+  <script src="index.js" charset="utf-8">
+
+  </script>
 
 </body>
 
